# bash-only-coding-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
src/bash_agent/: main.py
